webextensions/sidebar/styles/base.css
/* ... */
.sticky-tabs-container.below {
  bottom: calc(var(--after-tabs-area-size) + var(--tabbar-bottom-area-size) + var(--tabbar-bottom-area-size) + var(--subpanel-area-size));
}

:root.animation:not(.minimized) .tabs-spacer {
  transition: min-height var(--collapse-animation);
}

#normal-tabs-container.overflow .tabs-spacer {
  display: block;
}

:root.initializing #tabbar {
  opacity: 0;
}

:root.animation:not(.minimized) #tabbar {
  transition: margin-top var(--collapse-animation);
}

#background {
  background-color: -moz-dialog; /* This is required to cover dummy elements. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 */
  pointer-events: none;
  z-index: var(--background-z-index);
}

/* put scrollbar leftside */
:root.left #tabbar {
  direction: rtl;
}
:root.left #pinned-tabs-container > *,
:root.left #normal-tabs-container > *,
:root.left #tabbar .after-tabs {
  direction: ltr;
}

#tabbar {
  scrollbar-width: thin;
}


ul {
  flex-grow: 1;
  list-style: none;
  margin: 0;
  padding: 0;
}


/* dummy elements to calculate actual size of boxes */

#dummy-tabs {
  bottom: 0;
  left: 0;
  overflow-y: scroll;
  pointer-events: none;
  position: fixed;
  right: 0;
  z-index: var(--dummy-element-z-index); /* Put it below the background. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 */
}
:root:not(.have-unsynchronized-throbber) #dummy-tabs {
  clip: rect(0, 0, 0, 0); /* Don't hide animated throbber when its appearance is copied with -moz-element since doing so causes stuttering in the copied animation */
}

#dummy-favicon-size-box {
  background: -moz-dialog;
  display: inline-block;
  width: 1em;
  height: 1em;
  max-width: 1em;
  max-height: 1em;
  min-width: 16px;
  min-height: 16px;
}

#dummy-tab-color-box {
  background: -moz-dialog;
}

#dummy-highlight-color-box {
  background: Highlight;
  color: HighlightText;
}

#dummy-shift-tabs-for-scrollbar-distance-box {
  width: var(--shift-tabs-for-scrollbar-distance, 0);
}


/* tabs */

tab-item,
.sticky-tab-spacer {
  align-items: stretch;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: stretch;
  line-height: 1;
  list-style: none;
  margin: 0;
  max-width: 100%;
  /*overflow: hidden;*/ /* we should not apply overflow:hidden here to allow rendering box-shadow of contents */
  pointer-events: none;
  position: relative;
}

tab-item-substance {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  line-height: 1;
  margin: var(--tab-margin-top) var(--tab-margin-right) var(--tab-margin-bottom) var(--tab-margin-left);
  max-width: 100%;
  min-height: 0;
  /*overflow: hidden;*/ /* we should not apply overflow:hidden here to allow rendering box-shadow of contents */
  opacity: 1;
  pointer-events: auto;
  position: relative;
  z-index: var(--tab-base-z-index);
}

tab-item-substance .ui {
  align-items: stretch;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  flex-wrap: nowrap;
  justify-content: flex-start;
  max-width: calc(100% - var(--favicon-size));
}

tab-item-substance .caption {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  line-height: 1;
  margin: 0;
  width: 100%;
  max-height: var(--tab-size); /* Limit tab contents height for tabs customized as thinner. See also https://github.com/piroor/treestyletab/issues/3478 */
  min-height: 0;
  pointer-events: auto;
  position: static;
}

:root.left tab-item:not(.pinned) tab-item-substance {
  margin-left: calc(var(--tab-margin-left) + var(--tab-indent));
}

/* auto-hidden scrollbar placeholder workaround */
:root.left.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
  #tabbar.scrollbar-autohide
  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
:root.left:not(.shift-tabs-for-scrollbar-only-on-hover)
  #tabbar.scrollbar-autohide
  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance {
  margin-left: calc(var(--tab-margin-left) + var(--tab-indent) + var(--shift-tabs-for-scrollbar-distance));
}

:root.right tab-item:not(.pinned) tab-item-substance {
  margin-right: calc(var(--tab-margin-right) + var(--tab-indent));
}

/* auto-hidden scrollbar placeholder workaround */
:root.right.shift-tabs-for-scrollbar-only-on-hover.on-scrollbar-area:hover
  #tabbar.scrollbar-autohide
  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance,
:root.right:not(.shift-tabs-for-scrollbar-only-on-hover)
  #tabbar.scrollbar-autohide
  #normal-tabs-container.overflow tab-item:not(.pinned) tab-item-substance {
  margin-right: calc(var(--tab-margin-right) + var(--tab-indent) + var(--shift-tabs-for-scrollbar-distance));
}

tab-item,
tab-item * {
  vertical-align: middle;
}

tab-item tab-favicon {
  z-index: var(--tab-favicon-z-index);
}

tab-item.hidden {
  pointer-events: none;
  position: fixed;
  visibility: collapse;
}

:root.animation:not(.minimized) tab-item.animation-ready,
:root.animation:not(.minimized) tab-item.animation-ready tab-item-substance,
:root.animation:not(.minimized) .after-tabs button,
:root.animation:not(.minimized) .after-tabs [role="button"] {
  transition: var(--tab-animation);
}
:root.animation:not(.minimized) tab-item.animation-ready:not(.expanding),
:root.animation:not(.minimized) tab-item.animation-ready:not(.expanding) tab-item-substance,
:root.animation:not(.minimized) tab-item.animation-ready.expanding.moving,
:root.animation:not(.minimized) tab-item.animation-ready.expanding.moving tab-item-substance {
  transition: var(--tab-animation),
              var(--tab-indent-animation);
}

tab-item.removing,
tab-item:not(.pinned).collapsed,
tab-item.duplicating {
  pointer-events: none;
  z-index: var(--invisible-z-index);
}
/* ... */

